--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
         <section>
-            <h1>Prijzen?</h1>
+            <h1>Prijzen</h1>
             <ul>
                 <li>sleutelhanger</li>
                 <li>notitieboekje</li>
@@ -56,9 +56,6 @@
                 <li>knutselset</li>
                 <li>sleutelhanger met flesopener</li>
                 <li>zaklamp</li>
-                <li>gepersonaliseerde pen</li>
-                <li>gepersonaliseerde sleutelhanger</li>
-                <li>gepersonaliseerde mok</li>
                 <li>wijnfles</li>
                 <li>wijnstopper</li>
                 <li>sleutelhanger met foto</li>
@@ -103,9 +100,6 @@
                 <li>sportevenementkaartjes</li>
                 <li>museumkaartjes</li>
                 <li>pretparkkaartjes</li>
-                <li>cadeaubon voor een restaurant</li>
-                <li>cadeaubon voor een spa</li>
-                <li>cadeaubon voor een winkel</li>
                 <li>fitnessabonnement</li>
                 <li>yogalessen</li>
                 <li>golfuitrusting</li>
@@ -197,9 +191,6 @@
                 <li>knutselset</li>
                 <li>sleutelhanger met flesopener</li>
                 <li>zaklamp</li>
-                <li>gepersonaliseerde pen</li>
-                <li>gepersonaliseerde sleutelhanger</li>
-                <li>gepersonaliseerde mok</li>
                 <li>wijnfles</li>
                 <li>wijnstopper</li>
                 <li>sleutelhanger met foto</li>
@@ -244,9 +235,6 @@
                 <li>sportevenementkaartjes</li>
                 <li>museumkaartjes</li>
                 <li>pretparkkaartjes</li>
-                <li>cadeaubon voor een restaurant</li>
-                <li>cadeaubon voor een spa</li>
-                <li>cadeaubon voor een winkel</li>
                 <li>fitnessabonnement</li>
                 <li>yogalessen</li>
                 <li>golfuitrusting</li>
